Current changes before vendor purge
- Include all working infrastructure changes
- Migration scripts and test framework
- Will purge vendor directory from entire git history next

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
+# Google API credentials
+"Google API.json"
+Google API.json
+
 # Build outputs
 dist/
 build/
@@ -61,6 +65,7 @@ pids
 
 # Dependency directories
 jspm_packages/
+vendor/
 
 # Optional npm cache directory
 .npm
@@ -73,3 +78,6 @@ jspm_packages/
 
 # Yarn Integrity file
 .yarn-integrity
+
+# PDFs (will be uploaded to Google Drive)
+pdfs/*.pdf
