Remove all remaining emojis from documentation
- Clean up TEST-SCENARIOS.md: remove test tube, target, fire, checkmark emojis
- Clean up MIGRATION-WORKFLOW.md: remove cycle, checkmark emojis
- Clean up GitHub workflow dependencies.yml: remove package, checkmark emojis
- Professional technical documentation without decorative symbols

--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -41,9 +41,9 @@ jobs:
     - name: Log dependency update results
       if: steps.test-updated.outcome == 'success'
       run: |
-        echo "✅ Dependencies successfully updated and tested"
+        echo "Dependencies successfully updated and tested"
         echo "ℹ️  Manual PR creation may be needed if changes detected"
-        echo "📦 Core functionality: dependency updates ✅ tests ✅ security audit ✅"
+        echo "Core functionality: dependency updates, tests, security audit - all passed"
     
     - name: Security audit
       run: bundle exec bundle-audit
