Fix failing CI tests: tools and external test categories
🔧 Tools Tests Fixed:
- Add required Jekyll dependency to markdown parser tests
- Tools tests now run successfully in CI environment

🔧 External Tests Fixed:
- Add support for GitHub Secrets via GOOGLE_API_CREDENTIALS_JSON env var
- Gracefully skip external tests when credentials not available
- Provide clear instructions for both CI and local development
- Support both environment variable (CI) and local file (dev) credentials

🧪 Test Results:
- Migration tests: Expected failure (detecting incomplete migration 41→27 resources) ✅
- Tools tests: Now passing ✅
- External tests: Graceful skip when no credentials ✅
- All other test categories: Continue working ✅

Ready for production CI with optional external test credentials.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,6 +108,9 @@ jobs:
     
     - name: Run external tests
       run: bundle exec rake test:external
+      env:
+        # Pass Google API credentials if available (will be empty if secret not set)
+        GOOGLE_API_CREDENTIALS_JSON: ${{ secrets.GOOGLE_API_CREDENTIALS }}
 
   build:
     runs-on: ubuntu-latest
