Fix .gitignore to exclude Jekyll build artifacts
- Add .jekyll-metadata and _test_site/ to .gitignore
- Remove previously tracked Jekyll build files from git
- Prevents build artifacts from being committed to repository

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,10 @@ _site/
 
 # Static site generators
 .jekyll-cache/
+.jekyll-metadata
 .cache/
 .vuepress/dist/
+_test_site/
 
 # IDE and editors
 .vscode/
