refactor: Separate CI and Deploy workflows by concern
- CI workflow now triggers only on infrastructure changes (code, tests, configs)
- Deploy workflow now triggers only on content changes (_talks, assets, etc.)
- This prevents running full test suite on every content addition
- Enables independent development and content publication workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,13 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
+    paths:
+      - '_talks/**'
+      - 'assets/**'
+      - 'index.md'
+      - 'talks.html'
+      - '_data/**'
+      - 'pdfs/**'
   workflow_dispatch:
 
 permissions:
