--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,21 @@
 name: CI
 
 on:
-  push:
-    branches: [ main, develop ]
   pull_request:
     branches: [ main ]
+  push:
+    branches: [ develop ]
+    paths:
+      - 'lib/**'
+      - 'test/**'
+      - '_plugins/**'
+      - '_config.yml'
+      - 'Gemfile*'
+      - '_layouts/**'
+      - '_includes/**'
+      - '.github/workflows/**'
+      - 'Rakefile'
+      - '*.rb'
 
 jobs:
   test:
