fix: Resolve dependencies update workflow frozen mode issue
- Disable bundler-cache to allow Gemfile.lock updates
- Add explicit bundle config to unfreeze bundler
- This allows the dependency update workflow to modify lockfile

--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -18,10 +18,11 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.4.5'
-        bundler-cache: true
+        bundler-cache: false
     
     - name: Update dependencies
       run: |
+        bundle config set frozen false
         bundle update
         bundle exec bundle-audit --update
       env:
