📁 Remove PDFs from repository and add pdfs/ to .gitignore
- Remove pdfs/README.md from git tracking
- Add pdfs/ directory to .gitignore
- PDFs are temporary storage before upload to Google Drive
- Prevents accidental commits of large PDF files

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ _site-fixed.html
 .vuepress/dist/
 _test_site/
 
+# Temporary storage (PDFs uploaded to Google Drive)
+pdfs/
+
 # IDE and editors
 .vscode/
 .idea/
