--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: "https://jbaru.ch"
+url: "https://jbaruch.github.io"
 baseurl: ""
 hero_background: "https://images.unsplash.com/photo-1540575467063-178a50c2df87?w=1920"
 
