--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: "https://jbaruch.github.io"
-baseurl: ""
+baseurl: "/shownotes"
 hero_background: "https://images.unsplash.com/photo-1540575467063-178a50c2df87?w=1920"
 
 # Jekyll configuration
