Clean up helper scripts and documentation
- Remove redundant PDF validation scripts (now handled by tests)
- Remove debug scripts: debug_*.rb, compare_*.rb, analyze_*.rb
- Remove alternative migration scripts: migrate_talk_*.rb variants
- Remove test helper scripts: test_*.rb (use proper test suite)
- Remove duplicate test site directories: _perf_test_site, _test_site
- Remove shell scripts: migrate_clean.sh
- Update .gitignore to prevent accumulation of development artifacts
- PDF validation now handled by test_pdf_file_integrity in migration tests

--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,21 @@ _site-fixed.html
 .cache/
 .vuepress/dist/
 _test_site/
+_perf_test_site/
 
 # Temporary storage (PDFs uploaded to Google Drive)
 pdfs/
+
+# Development helper scripts (use proper test suite instead)
+debug_*.rb
+test_*.rb
+compare_*.rb
+analyze_*.rb
+migrate_talk_*.rb
+*_comparison.rb
+
+# Shell scripts (use Ruby tools instead)
+*.sh
 
 # IDE and editors
 .vscode/
