Add automated screenshot cleanup and improve gitignore
Cleanup improvements:
- Add automatic screenshot cleanup in visual test teardown
- Remove all screenshot directories after each test run
- Add test/screenshots/ and test_downloads/ to .gitignore
- Remove previously committed screenshot files from repository
- Clean up test download directories

Benefits:
- No temporary test files committed to repository
- Clean test environment after each run
- Reduced repository size and noise
- Proper separation of test artifacts from source code

Test verification:
- ✅ All 19 visual tests pass with automated cleanup
- ✅ 0 screenshots remain after test execution
- ✅ 0 test download directories remain
- ✅ Gitignore properly excludes temporary test files

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,11 @@ vendor/
 
 # PDFs (will be uploaded to Google Drive)
 pdfs/*.pdf
+
+# Test screenshots (temporary files, not for version control)
+test/screenshots/
+test/**/screenshots/
+
+# Test downloads (temporary test files)
+test_downloads/
+**/test_downloads/
