Fix 404 issue for future-dated talks
- Add 'future: true' to Jekyll config to include future-dated talks
- Fixes issue where talks with future dates (like 2025-09-15) were not generating pages
- Now all talks will be accessible regardless of their date

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ highlighter: rouge
 permalink: /:categories/:title/
 encoding: utf-8
 timezone: UTC
+future: true
 
 # Kramdown configuration
 kramdown:
