Ignore test baseline output files
- Add test_baseline_output.txt to .gitignore
- Add pattern for all baseline output files
- These are temporary test comparison files not needed in version control

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,7 @@ test/**/screenshots/
 # Test downloads (temporary test files)
 test_downloads/
 **/test_downloads/
+
+# Test output files (baseline comparisons, coverage reports)
+test_baseline_output.txt
+*_baseline_output.txt
