Fix production website issues: add plugin debugging, error handling, and exclude sample talk
- Add debugging output to markdown parser plugin to track execution
- Add error handling with fallback values for failed extractions
- Change plugin priority from :high to :highest
- Move sample-talk.md to docs/templates/ directory
- Add sample-talk.md to .gitignore to prevent future accidents
- Add unit tests for plugin extraction methods

Fixes: Missing content on production, sample talk appearing on site
Requirements: 1.1-1.5, 2.1-2.5, 4.1-4.5

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,6 @@ test_downloads/
 # Test output files (baseline comparisons, coverage reports)
 test_baseline_output.txt
 *_baseline_output.txt
+
+# Template files (not for production)
+_talks/sample-talk.md
